# meta-mcp-server

./: .env.example  .gitignore  LICENSE  Meta API Developer.docx  PLAN.md  README.md  pyproject.toml  requirements.txt
meta_insights_mcp/: __init__.py  __main__.py  config.py  meta_client.py  server.py
meta_insights_mcp/tools/: __init__.py  ads.py  assets.py  business.py  pages.py
